test/integration/bad/new/mystery53.stan
transformed data { return 1.0 while